assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto&display=swap');

:root {
    --red: #e40203;
    --orange: #ff8c01;
    --yellow: #feed01;
    --green: #007f24;
    --blue: #004dff;
    --purple: #790589;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: #2d2d2d;
    color: #fefefe;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.container {
    height: 50vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}

h1 {
    font-family: 'Noto Sans', sans-serif;
    font-size: 600%;
    letter-spacing: 2ch;
    user-select: none;
    padding-left: 2ch;
}

.fa-chevron-down {
    font-size: 4rem;
    transition: all .5s ease-in-out;
}

.fa-chevron-down:hover {
    font-size: 6rem;
    background-image: linear-gradient(90deg,
        var(--red), var(--red),
        var(--orange), var(--orange),
        var(--yellow), var(--yellow),
        var(--green), var(--green),
        var(--blue), var(--blue),
        var(--purple), var(--purple)
    );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    cursor: pointer;
}

